--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="images/dice6.png">
+        <img class="img1" src="/DiceRoll/dice6.png">
       </div>
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="images/dice6.png">
+        <img class="img2" src="/DiceRoll/dice6.png">
       </div>
     </div>
     <div class="button-flex">
       <button type="button" onclick="roll()"><p>Roll</p></button>
     </div>
-  <script src="index.js" charset="utf-8"></script>
+  <script src="/DiceRoll/index.js" charset="utf-8"></script>
   </body>
 
   <footer>
